v3.0.0/_sources/plugins/user_module.rst.txt
.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na

.. Anchors

.. _ansible_collections.theforeman.foreman.user_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

theforeman.foreman.user -- Manage Users
+++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This plugin is part of the `theforeman.foreman collection <https://galaxy.ansible.com/theforeman/foreman>`_ (version 3.0.0).

    You might already have this collection installed if you are using the ``ansible`` package.
    It is not included in ``ansible-core``.
    To check whether it is installed, run :code:`ansible-galaxy collection list`.

    To install it, use: :code:`ansible-galaxy collection install theforeman.foreman`.

    To use it in a playbook, specify: :code:`theforeman.foreman.user`.

.. version_added

.. versionadded:: 1.0.0 of theforeman.foreman

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Create, update, and delete users


.. Aliases


.. Requirements

Requirements
------------
The below requirements are needed on the host that executes this module.

- requests


.. Options

Parameters
----------

.. raw:: html

    <table  border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="1">Parameter</th>
            <th>Choices/<font color="blue">Defaults</font></th>
                        <th width="100%">Comments</th>
        </tr>
                    <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-admin"></div>
                    <b>admin</b>
                    <a class="ansibleOptionLink" href="#parameter-admin" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">boolean</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                                                                                    <ul style="margin: 0; padding: 0"><b>Choices:</b>
                                                                                                                                                                <li><div style="color: blue"><b>no</b>&nbsp;&larr;</div></li>
                                                                                                                                                                                                <li>yes</li>
                                                                                    </ul>
                                                                            </td>
                                                                <td>
                                            <div>Whether or not the user is an administrator</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-auth_source"></div>
                    <b>auth_source</b>
                    <a class="ansibleOptionLink" href="#parameter-auth_source" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Authentication source where the user exists</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-default_location"></div>
                    <b>default_location</b>
                    <a class="ansibleOptionLink" href="#parameter-default_location" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>The location that the user uses by default</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-default_organization"></div>
                    <b>default_organization</b>
                    <a class="ansibleOptionLink" href="#parameter-default_organization" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>The organizxation that the user uses by default</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-description"></div>
                    <b>description</b>
                    <a class="ansibleOptionLink" href="#parameter-description" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Description of the user</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-firstname"></div>
                    <b>firstname</b>
                    <a class="ansibleOptionLink" href="#parameter-firstname" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>First name of the user</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-lastname"></div>
                    <b>lastname</b>
                    <a class="ansibleOptionLink" href="#parameter-lastname" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Last name of the user</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-locale"></div>
                    <b>locale</b>
                    <a class="ansibleOptionLink" href="#parameter-locale" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                            <ul style="margin: 0; padding: 0"><b>Choices:</b>
                                                                                                                                                                <li>ca</li>
                                                                                                                                                                                                <li>de</li>
                                                                                                                                                                                                <li>en</li>
                                                                                                                                                                                                <li>en_GB</li>
                                                                                                                                                                                                <li>es</li>
                                                                                                                                                                                                <li>fr</li>
                                                                                                                                                                                                <li>gl</li>
                                                                                                                                                                                                <li>it</li>
                                                                                                                                                                                                <li>ja</li>
                                                                                                                                                                                                <li>ko</li>
                                                                                                                                                                                                <li>nl_NL</li>
                                                                                                                                                                                                <li>pl</li>
                                                                                                                                                                                                <li>pt_BR</li>
                                                                                                                                                                                                <li>ru</li>
                                                                                                                                                                                                <li>sv_SE</li>
                                                                                                                                                                                                <li>zh_CN</li>
                                                                                                                                                                                                <li>zh_TW</li>
                                                                                    </ul>
                                                                            </td>
                                                                <td>
                                            <div>The language locale for the user</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-locations"></div>
                    <b>locations</b>
                    <a class="ansibleOptionLink" href="#parameter-locations" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">list</span>
                         / <span style="color: purple">elements=string</span>                                            </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>List of locations the entity should be assigned to</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-login"></div>
                    <b>login</b>
                    <a class="ansibleOptionLink" href="#parameter-login" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                 / <span style="color: red">required</span>                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Name of the user</div>
                                                                <div style="font-size: small; color: darkgreen"><br/>aliases: name</div>
                                    </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-mail"></div>
                    <b>mail</b>
                    <a class="ansibleOptionLink" href="#parameter-mail" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Email address of the user</div>
                                            <div>Required when creating a new user</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-organizations"></div>
                    <b>organizations</b>
                    <a class="ansibleOptionLink" href="#parameter-organizations" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">list</span>
                         / <span style="color: purple">elements=string</span>                                            </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>List of organizations the entity should be assigned to</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-password"></div>
                    <b>password</b>
                    <a class="ansibleOptionLink" href="#parameter-password" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                 / <span style="color: red">required</span>                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Password of the user accessing the Foreman server.</div>
                                            <div>If the value is not specified in the task, the value of environment variable <code>FOREMAN_PASSWORD</code> will be used instead.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-roles"></div>
                    <b>roles</b>
                    <a class="ansibleOptionLink" href="#parameter-roles" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">list</span>
                         / <span style="color: purple">elements=string</span>                                            </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>List of roles assigned to the user</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-server_url"></div>
                    <b>server_url</b>
                    <a class="ansibleOptionLink" href="#parameter-server_url" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                 / <span style="color: red">required</span>                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>URL of the Foreman server.</div>
                                            <div>If the value is not specified in the task, the value of environment variable <code>FOREMAN_SERVER_URL</code> will be used instead.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-state"></div>
                    <b>state</b>
                    <a class="ansibleOptionLink" href="#parameter-state" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                            <ul style="margin: 0; padding: 0"><b>Choices:</b>
                                                                                                                                                                <li><div style="color: blue"><b>present</b>&nbsp;&larr;</div></li>
                                                                                                                                                                                                <li>absent</li>
                                                                                    </ul>
                                                                            </td>
                                                                <td>
                                            <div>State of the entity</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-timezone"></div>
                    <b>timezone</b>
                    <a class="ansibleOptionLink" href="#parameter-timezone" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                            <ul style="margin: 0; padding: 0"><b>Choices:</b>
                                                                                                                                                                <li>International Date Line West</li>
                                                                                                                                                                                                <li>American Samoa</li>
                                                                                                                                                                                                <li>Midway Island</li>
                                                                                                                                                                                                <li>Hawaii</li>
                                                                                                                                                                                                <li>Alaska</li>
                                                                                                                                                                                                <li>Pacific Time (US &amp; Canada)</li>
                                                                                                                                                                                                <li>Tijuana</li>
                                                                                                                                                                                                <li>Arizona</li>
                                                                                                                                                                                                <li>Chihuahua</li>
                                                                                                                                                                                                <li>Mazatlan</li>
                                                                                                                                                                                                <li>Mountain Time (US &amp; Canada)</li>
                                                                                                                                                                                                <li>Central America</li>
                                                                                                                                                                                                <li>Central Time (US &amp; Canada)</li>
                                                                                                                                                                                                <li>Guadalajara</li>
                                                                                                                                                                                                <li>Mexico City</li>
                                                                                                                                                                                                <li>Monterrey</li>
                                                                                                                                                                                                <li>Saskatchewan</li>
                                                                                                                                                                                                <li>Bogota</li>
                                                                                                                                                                                                <li>Eastern Time (US &amp; Canada)</li>
                                                                                                                                                                                                <li>Indiana (East)</li>
                                                                                                                                                                                                <li>Lima</li>
                                                                                                                                                                                                <li>Quito</li>
                                                                                                                                                                                                <li>Atlantic Time (Canada)</li>
                                                                                                                                                                                                <li>Caracas</li>
                                                                                                                                                                                                <li>Georgetown</li>
                                                                                                                                                                                                <li>La Paz</li>
                                                                                                                                                                                                <li>Puerto Rico</li>
                                                                                                                                                                                                <li>Santiago</li>
                                                                                                                                                                                                <li>Newfoundland</li>
                                                                                                                                                                                                <li>Brasilia</li>
                                                                                                                                                                                                <li>Buenos Aires</li>
                                                                                                                                                                                                <li>Greenland</li>
                                                                                                                                                                                                <li>Montevideo</li>
                                                                                                                                                                                                <li>Mid-Atlantic</li>
                                                                                                                                                                                                <li>Azores</li>
                                                                                                                                                                                                <li>Cape Verde Is.</li>
                                                                                                                                                                                                <li>Dublin</li>
                                                                                                                                                                                                <li>Edinburgh</li>
                                                                                                                                                                                                <li>Lisbon</li>
                                                                                                                                                                                                <li>London</li>
                                                                                                                                                                                                <li>Monrovia</li>
                                                                                                                                                                                                <li>UTC</li>
                                                                                                                                                                                                <li>Amsterdam</li>
                                                                                                                                                                                                <li>Belgrade</li>
                                                                                                                                                                                                <li>Berlin</li>
                                                                                                                                                                                                <li>Bern</li>
                                                                                                                                                                                                <li>Bratislava</li>
                                                                                                                                                                                                <li>Brussels</li>
                                                                                                                                                                                                <li>Budapest</li>
                                                                                                                                                                                                <li>Casablanca</li>
                                                                                                                                                                                                <li>Copenhagen</li>
                                                                                                                                                                                                <li>Ljubljana</li>
                                                                                                                                                                                                <li>Madrid</li>
                                                                                                                                                                                                <li>Paris</li>
                                                                                                                                                                                                <li>Prague</li>
                                                                                                                                                                                                <li>Rome</li>
                                                                                                                                                                                                <li>Sarajevo</li>
                                                                                                                                                                                                <li>Skopje</li>
                                                                                                                                                                                                <li>Stockholm</li>
                                                                                                                                                                                                <li>Vienna</li>
                                                                                                                                                                                                <li>Warsaw</li>
                                                                                                                                                                                                <li>West Central Africa</li>
                                                                                                                                                                                                <li>Zagreb</li>
                                                                                                                                                                                                <li>Zurich</li>
                                                                                                                                                                                                <li>Athens</li>
                                                                                                                                                                                                <li>Bucharest</li>
                                                                                                                                                                                                <li>Cairo</li>
                                                                                                                                                                                                <li>Harare</li>
                                                                                                                                                                                                <li>Helsinki</li>
                                                                                                                                                                                                <li>Jerusalem</li>
                                                                                                                                                                                                <li>Kaliningrad</li>
                                                                                                                                                                                                <li>Kyiv</li>
                                                                                                                                                                                                <li>Pretoria</li>
                                                                                                                                                                                                <li>Riga</li>
                                                                                                                                                                                                <li>Sofia</li>
                                                                                                                                                                                                <li>Tallinn</li>
                                                                                                                                                                                                <li>Vilnius</li>
                                                                                                                                                                                                <li>Baghdad</li>
                                                                                                                                                                                                <li>Istanbul</li>
                                                                                                                                                                                                <li>Kuwait</li>
                                                                                                                                                                                                <li>Minsk</li>
                                                                                                                                                                                                <li>Moscow</li>
                                                                                                                                                                                                <li>Nairobi</li>
                                                                                                                                                                                                <li>Riyadh</li>
                                                                                                                                                                                                <li>St. Petersburg</li>
                                                                                                                                                                                                <li>Tehran</li>
                                                                                                                                                                                                <li>Abu Dhabi</li>
                                                                                                                                                                                                <li>Baku</li>
                                                                                                                                                                                                <li>Muscat</li>
                                                                                                                                                                                                <li>Samara</li>
                                                                                                                                                                                                <li>Tbilisi</li>
                                                                                                                                                                                                <li>Volgograd</li>
                                                                                                                                                                                                <li>Yerevan</li>
                                                                                                                                                                                                <li>Kabul</li>
                                                                                                                                                                                                <li>Ekaterinburg</li>
                                                                                                                                                                                                <li>Islamabad</li>
                                                                                                                                                                                                <li>Karachi</li>
                                                                                                                                                                                                <li>Tashkent</li>
                                                                                                                                                                                                <li>Chennai</li>
                                                                                                                                                                                                <li>Kolkata</li>
                                                                                                                                                                                                <li>Mumbai</li>
                                                                                                                                                                                                <li>New Delhi</li>
                                                                                                                                                                                                <li>Sri Jayawardenepura</li>
                                                                                                                                                                                                <li>Kathmandu</li>
                                                                                                                                                                                                <li>Almaty</li>
                                                                                                                                                                                                <li>Astana</li>
                                                                                                                                                                                                <li>Dhaka</li>
                                                                                                                                                                                                <li>Urumqi</li>
                                                                                                                                                                                                <li>Rangoon</li>
                                                                                                                                                                                                <li>Bangkok</li>
                                                                                                                                                                                                <li>Hanoi</li>
                                                                                                                                                                                                <li>Jakarta</li>
                                                                                                                                                                                                <li>Krasnoyarsk</li>
                                                                                                                                                                                                <li>Novosibirsk</li>
                                                                                                                                                                                                <li>Beijing</li>
                                                                                                                                                                                                <li>Chongqing</li>
                                                                                                                                                                                                <li>Hong Kong</li>
                                                                                                                                                                                                <li>Irkutsk</li>
                                                                                                                                                                                                <li>Kuala Lumpur</li>
                                                                                                                                                                                                <li>Perth</li>
                                                                                                                                                                                                <li>Singapore</li>
                                                                                                                                                                                                <li>Taipei</li>
                                                                                                                                                                                                <li>Ulaanbaatar</li>
                                                                                                                                                                                                <li>Osaka</li>
                                                                                                                                                                                                <li>Sapporo</li>
                                                                                                                                                                                                <li>Seoul</li>
                                                                                                                                                                                                <li>Tokyo</li>
                                                                                                                                                                                                <li>Yakutsk</li>
                                                                                                                                                                                                <li>Adelaide</li>
                                                                                                                                                                                                <li>Darwin</li>
                                                                                                                                                                                                <li>Brisbane</li>
                                                                                                                                                                                                <li>Canberra</li>
                                                                                                                                                                                                <li>Guam</li>
                                                                                                                                                                                                <li>Hobart</li>
                                                                                                                                                                                                <li>Melbourne</li>
                                                                                                                                                                                                <li>Port Moresby</li>
                                                                                                                                                                                                <li>Sydney</li>
                                                                                                                                                                                                <li>Vladivostok</li>
                                                                                                                                                                                                <li>Magadan</li>
                                                                                                                                                                                                <li>New Caledonia</li>
                                                                                                                                                                                                <li>Solomon Is.</li>
                                                                                                                                                                                                <li>Srednekolymsk</li>
                                                                                                                                                                                                <li>Auckland</li>
                                                                                                                                                                                                <li>Fiji</li>
                                                                                                                                                                                                <li>Kamchatka</li>
                                                                                                                                                                                                <li>Marshall Is.</li>
                                                                                                                                                                                                <li>Wellington</li>
                                                                                                                                                                                                <li>Chatham Is.</li>
                                                                                                                                                                                                <li>Nuku&#39;alofa</li>
                                                                                                                                                                                                <li>Samoa</li>
                                                                                                                                                                                                <li>Tokelau Is.</li>
                                                                                    </ul>
                                                                            </td>
                                                                <td>
                                            <div>Timezone for the user</div>
                                            <div>If blank it will use the browser timezone.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-user_password"></div>
                    <b>user_password</b>
                    <a class="ansibleOptionLink" href="#parameter-user_password" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Password for the user</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-username"></div>
                    <b>username</b>
                    <a class="ansibleOptionLink" href="#parameter-username" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">string</span>
                                                 / <span style="color: red">required</span>                    </div>
                                                        </td>
                                <td>
                                                                                                                                                            </td>
                                                                <td>
                                            <div>Username accessing the Foreman server.</div>
                                            <div>If the value is not specified in the task, the value of environment variable <code>FOREMAN_USERNAME</code> will be used instead.</div>
                                                        </td>
            </tr>
                                <tr>
                                                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="parameter-validate_certs"></div>
                    <b>validate_certs</b>
                    <a class="ansibleOptionLink" href="#parameter-validate_certs" title="Permalink to this option"></a>
                    <div style="font-size: small">
                        <span style="color: purple">boolean</span>
                                                                    </div>
                                                        </td>
                                <td>
                                                                                                                                                                                                                    <ul style="margin: 0; padding: 0"><b>Choices:</b>
                                                                                                                                                                <li>no</li>
                                                                                                                                                                                                <li><div style="color: blue"><b>yes</b>&nbsp;&larr;</div></li>
                                                                                    </ul>
                                                                            </td>
                                                                <td>
                                            <div>Whether or not to verify the TLS certificates of the Foreman server.</div>
                                            <div>If the value is not specified in the task, the value of environment variable <code>FOREMAN_VALIDATE_CERTS</code> will be used instead.</div>
                                                        </td>
            </tr>
                        </table>
    <br/>

.. Attributes


.. Notes


.. Seealso


.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    - name: Create a user
      theforeman.foreman.user:
        name: test
        firstname: Test
        lastname: Userson
        mail: test.userson@example.com
        description: Dr. Test Userson
        admin: no
        user_password: s3cret
        default_location: Test Location
        default_organization: Test Organization
        auth_source: Internal
        timezone: Stockholm
        locale: sv_SE
        roles:
          - Manager
        locations:
          - Test Location
        organizations:
          - Test Organization
        state: present

    - name: Update a user
      theforeman.foreman.user:
        name: test
        firstname: Tester
        state: present

    - name: Change password
      theforeman.foreman.user:
        name: test
        user_password: newp@ss





.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. raw:: html

    <table border=0 cellpadding=0 class="documentation-table">
        <tr>
            <th colspan="2">Key</th>
            <th>Returned</th>
            <th width="100%">Description</th>
        </tr>
                    <tr>
                                <td colspan="2">
                    <div class="ansibleOptionAnchor" id="return-entity"></div>
                    <b>entity</b>
                    <a class="ansibleOptionLink" href="#return-entity" title="Permalink to this return value"></a>
                    <div style="font-size: small">
                      <span style="color: purple">dictionary</span>
                                          </div>
                                    </td>
                <td>success</td>
                <td>
                                            <div>Final state of the affected entities grouped by their type.</div>
                                        <br/>
                                                        </td>
            </tr>
                                        <tr>
                                    <td class="elbow-placeholder">&nbsp;</td>
                                <td colspan="1">
                    <div class="ansibleOptionAnchor" id="return-entity/users"></div>
                    <b>users</b>
                    <a class="ansibleOptionLink" href="#return-entity/users" title="Permalink to this return value"></a>
                    <div style="font-size: small">
                      <span style="color: purple">list</span>
                       / <span style="color: purple">elements=dictionary</span>                    </div>
                                    </td>
                <td>success</td>
                <td>
                                            <div>List of users.</div>
                                        <br/>
                                                        </td>
            </tr>
                    
                        </table>
    <br/><br/>

..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Christoffer Reijer (@ephracis) Basalt AB



.. Parsing errors

